Complete KundenregisterTest.java and fix minor bugs in berechneKosten
Signed-off-by: Oliver Geisel <geisel.oliver@googlemail.com>